--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -20,10 +20,17 @@
         android:id="@+id/groupTestBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="221dp"
+        android:layout_marginTop="108dp"
         android:text="Test Group"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/testListView"
+        android:layout_width="368dp"
+        android:layout_height="339dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="164dp" />
 
 </android.support.constraint.ConstraintLayout>
