--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,7 +7,7 @@
     tools:context="project.cmpt276.androidui.walkingschoolbus.signUp">
 
     <EditText
-        android:id="@+id/getName"
+        android:id="@+id/createName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="184dp"
@@ -30,7 +30,7 @@
         android:hint="Enter Your Email"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/getName" />
+        app:layout_constraintTop_toBottomOf="@+id/createName" />
 
     <EditText
         android:id="@+id/createPassword"
@@ -63,5 +63,5 @@
         android:textColor="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/getName" />
+        app:layout_constraintTop_toBottomOf="@+id/createName" />
 </android.support.constraint.ConstraintLayout>
