--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -18,4 +18,14 @@
         android:layout_marginTop="20dp"
         android:paddingRight="10dp"/>
 
+        <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|bottom"
+        android:text="Join Group"
+        android:id="@+id/btnJoinGroup"
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        android:paddingRight="10dp"/>
+
     </fragment>
