--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -4,51 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="project.cmpt276.androidui.walkingschoolbus.mainMenu">
+    tools:context="project.cmpt276.androidui.walkingschoolbus.mainMenu"
+    tools:layout_editor_absoluteY="81dp">
 
     <Button
         android:id="@+id/monitorUserBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
         android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/testListView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/groupTestBtn"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/groupTestBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
+        android:layout_marginBottom="28dp"
+        android:layout_marginStart="25dp"
         android:text="Test Group"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/whoIMonitorBtn"
+        app:layout_constraintStart_toStartOf="@+id/whoIMonitorBtn" />
 
     <Button
         android:id="@+id/goToMap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="396dp"
+        android:layout_marginBottom="69dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginTop="67dp"
         android:text="Map"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <ListView
-        android:id="@+id/testListView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/whoIMonitorBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/monitorUserBtn" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/greeting"
@@ -59,4 +48,24 @@
         android:text="hello there"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/whoIMonitorBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="22dp"
+        android:layout_marginStart="12dp"
+        android:text="See Who I Monitor"
+        app:layout_constraintBottom_toTopOf="@+id/whoMonitorsMeBtn"
+        app:layout_constraintStart_toStartOf="@+id/whoMonitorsMeBtn" />
+
+    <Button
+        android:id="@+id/whoMonitorsMeBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="209dp"
+        android:text="See Who Monitors Me"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
