Commit - added who i monitor activity and who monitors me where: - User can list the users whom they monitor, and who monitors them.     Should show at least the name and email of the other account. - User can remove anyone from the list of users whom they monitor, and who monitors them. - User can add another user to the set of users they monitor (add their child).     The child account must already exist and is identified by its email address. - User can add another user to the set of users who monitor them (add their parent).     The parent account must already exist and is identified by its email address.

--- a/app/src/main/res/layout/activity_who_i_monitor.xml
+++ b/app/src/main/res/layout/activity_who_i_monitor.xml
@@ -11,24 +11,23 @@
         android:id="@+id/currentMonitoringView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
         android:layout_marginTop="16dp"
         android:text="@string/currently_monitoring"
-        app:layout_constraintEnd_toStartOf="@+id/toDeleteView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="16dp" />
 
     <ListView
         android:id="@+id/currentlyMonitoringList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="43dp"
+        android:layout_marginBottom="19dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="38dp"
-        app:layout_constraintBottom_toTopOf="@+id/addSomoneToMonitorView"
+        android:layout_marginTop="19dp"
+        app:layout_constraintBottom_toBottomOf="@+id/addSomoneToMonitorView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/currentMonitoringView" />
+        app:layout_constraintTop_toBottomOf="@+id/currentMonitoringView" />
 
     <EditText
         android:id="@+id/addSomeoneToMonitorEdit"
@@ -44,11 +43,11 @@
         android:id="@+id/addSomoneToMonitorView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="143dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginBottom="184dp"
+        android:layout_marginStart="8dp"
         android:text="@string/add_a_user_to_monitor"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/currentlyMonitoringList" />
 
     <Button
         android:id="@+id/addUserToMonitorBtn"
@@ -58,22 +57,39 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/addSomeoneToMonitorEdit"
         app:layout_constraintStart_toEndOf="@+id/addSomeoneToMonitorEdit" />
 
-    <TextView
-        android:id="@+id/toDeleteView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:text="@string/long_press_user_to_stop_monitoring"
-        app:layout_constraintBottom_toTopOf="@+id/currentlyMonitoringList"
-        app:layout_constraintEnd_toEndOf="@+id/currentlyMonitoringList" />
-
     <Button
         android:id="@+id/returnMainMenuBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
-        android:text="Return to Main Menu"
+        android:text="@string/return_to_main_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/stopMonitoringView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/stop_monitoring_a_user"
+        app:layout_constraintStart_toStartOf="@+id/addSomeoneToMonitorEdit"
+        app:layout_constraintTop_toBottomOf="@+id/addSomeoneToMonitorEdit" />
+
+    <EditText
+        android:id="@+id/stopMonitoringText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/user_s_email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintStart_toStartOf="@+id/stopMonitoringView"
+        app:layout_constraintTop_toBottomOf="@+id/stopMonitoringView" />
+
+    <Button
+        android:id="@+id/stopMonitoringBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/remove"
+        app:layout_constraintBaseline_toBaselineOf="@+id/stopMonitoringText"
+        app:layout_constraintStart_toEndOf="@+id/stopMonitoringText" />
 </android.support.constraint.ConstraintLayout>
