--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,30 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="project.cmpt276.androidui.walkingschoolbus.Login">
+    tools:context="project.cmpt276.androidui.walkingschoolbus.Login"
+    tools:layout_editor_absoluteY="81dp">
 
     <Button
         android:id="@+id/loginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
-        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="56dp"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/loginErrorMessages" />
 
     <EditText
         android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        android:layout_marginStart="39dp"
         android:layout_marginTop="92dp"
         android:ems="10"
         android:hint="User Name"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/loginErrorMessages"
-        app:layout_constraintStart_toStartOf="parent"
+        android:inputType="textEmailAddress"
+        app:layout_constraintStart_toStartOf="@+id/enterPassWord"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -38,29 +35,29 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="@+id/userName"
+        app:layout_constraintStart_toStartOf="@+id/loginErrorMessages"
         app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     <Button
         android:id="@+id/createUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
-        android:layout_marginStart="39dp"
+        android:layout_marginEnd="42dp"
         android:text="Sign Up"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginErrorMessages" />
 
     <TextView
         android:id="@+id/loginErrorMessages"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="104dp"
-        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="48dp"
+        android:layout_marginEnd="36dp"
         android:layout_marginStart="39dp"
+        android:layout_marginTop="57dp"
         android:textColor="@android:color/holo_red_dark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
+        app:layout_constraintBottom_toBottomOf="@+id/loginBtn"
+        app:layout_constraintEnd_toEndOf="@+id/createUser"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userName" />
+        app:layout_constraintTop_toTopOf="@+id/enterPassWord" />
 </android.support.constraint.ConstraintLayout>
