--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,24 +8,39 @@
     tools:context="project.cmpt276.androidui.walkingschoolbus.MapsActivity"
     tools:layout="@layout/activity_maps" >
 
-        <Button
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left|top"
-        android:text="Save New Group"
-        android:id="@+id/btnSaveGroup"
-        android:padding="10dp"
-        android:layout_marginTop="20dp"
-        android:paddingRight="10dp"/>
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:orientation="vertical"
+        android:gravity="bottom|left"
+        android:layout_gravity="bottom|left">
+
+            <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save New Group"
+            android:id="@+id/btnSaveGroup"
+            android:padding="10dp"
+            android:paddingRight="10dp"/>
+
+            <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Join Group"
+            android:id="@+id/btnJoinGroup"
+            android:padding="10dp"
+            android:paddingRight="10dp"/>
 
         <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left|bottom"
-        android:text="Join Group"
-        android:id="@+id/btnJoinGroup"
-        android:padding="10dp"
-        android:layout_marginTop="20dp"
-        android:paddingRight="10dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add User to Group"
+            android:id="@+id/btnAddUserToGrp"
+            android:padding="10dp"
+            android:paddingRight="10dp"/>
 
-    </fragment>
+    </LinearLayout>
+
+</fragment>
