--- a/app/src/main/res/layout/activity_add_monitored_users_to_group.xml
+++ b/app/src/main/res/layout/activity_add_monitored_users_to_group.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="project.cmpt276.androidui.walkingschoolbus.AddMonitoredUsersToGroup">
 
     <ListView
@@ -30,7 +31,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="232dp"
-        android:text="Finish"
+        android:text="@string/finish"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
