--- a/app/src/main/res/layout/activity_monitored_user_groups.xml
+++ b/app/src/main/res/layout/activity_monitored_user_groups.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="project.cmpt276.androidui.walkingschoolbus.monitoredUserGroupsActivity"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteY="81dp"
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/userGroupsView"
