--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,64 +4,79 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="project.cmpt276.androidui.walkingschoolbus.signUp">
+    android:background="@drawable/background"
+    tools:context="project.cmpt276.androidui.walkingschoolbus.signUp"
+    tools:layout_editor_absoluteY="81dp">
 
     <EditText
         android:id="@+id/createName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="184dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="27dp"
         android:ems="10"
-        android:hint="Enter Your Name"
+        android:hint="@string/enter_your_name"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/errorMessages"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/accountCreationInstructions" />
 
     <EditText
         android:id="@+id/createEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="17dp"
         android:ems="10"
-        android:hint="Enter Your Email"
+        android:hint="@string/enter_your_email"
         android:inputType="textEmailAddress"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/createName"
         app:layout_constraintTop_toBottomOf="@+id/createName" />
 
     <EditText
         android:id="@+id/createPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="22dp"
         android:ems="10"
-        android:hint="Create Your Password"
+        android:hint="@string/create_your_password"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/createEmail"
         app:layout_constraintTop_toBottomOf="@+id/createEmail" />
 
     <Button
         android:id="@+id/join"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        android:layout_marginStart="16dp"
-        android:text="Join"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="33dp"
+        android:text="@string/join"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/errorMessages" />
 
     <TextView
         android:id="@+id/errorMessages"
-        android:layout_width="322dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="106dp"
-        android:layout_marginStart="6dp"
+        android:layout_marginBottom="21dp"
+        android:layout_marginEnd="34dp"
+        android:layout_marginStart="35dp"
         android:textColor="@android:color/holo_red_dark"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/join"
+        app:layout_constraintEnd_toEndOf="@+id/join"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createName" />
+        app:layout_constraintTop_toBottomOf="@+id/accountCreationInstructions" />
+
+    <TextView
+        android:id="@+id/accountCreationInstructions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="242dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="25dp"
+        android:text="@string/please_enter_your_credentials"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/errorMessages"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
