--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -59,7 +59,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/greeting"
         android:layout_width="355dp"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
