--- a/app/src/main/res/layout/activity_send_user_message.xml
+++ b/app/src/main/res/layout/activity_send_user_message.xml
@@ -5,64 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context="project.cmpt276.androidui.walkingschoolbus.SendingMessageActivity">
+    tools:context="project.cmpt276.androidui.walkingschoolbus.SendUserMessageActivity">
 
     <EditText
-        android:id="@+id/edtMessageInput"
-        android:layout_width="344dp"
-        android:layout_height="70dp"
+        android:id="@+id/edtUserSendMessageInput"
+        android:layout_width="356dp"
+        android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textLongMessage"
+        android:inputType="textMultiLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.102" />
+        app:layout_constraintVertical_bias="0.079" />
 
     <TextView
-        android:id="@+id/txtEnterYourMessage"
+        android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/enter_your_message"
+        android:layout_height="20dp"
+        android:text="@string/enter_message"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.032" />
 
     <ListView
-        android:id="@+id/lstGroupsToSendTo"
-        android:layout_width="350dp"
-        android:layout_height="296dp"
+        android:id="@+id/lstUserGroupsSendable"
+        android:layout_width="368dp"
+        android:layout_height="310dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.587" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnSendToGroup"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:text="@string/send_to_selected_group"
+        android:id="@+id/btnUserSend"
+        android:layout_width="115dp"
+        android:layout_height="67dp"
+        android:text="@string/send_message"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.033"
+        app:layout_constraintHorizontal_bias="0.94"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.964" />
-
-    <Button
-        android:id="@+id/btnSendToParents"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:text="@string/send_to_parents"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.966"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.964" />
-
 </android.support.constraint.ConstraintLayout>
